WIP on supporting multiple programs

--- a/liftwell/Base.lproj/Main.storyboard
+++ b/liftwell/Base.lproj/Main.storyboard
@@ -691,30 +691,116 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Second View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
-                                <rect key="frame" x="87" y="312" width="201.5" height="43"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by SecondViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDk-cv-Gan">
-                                <rect key="frame" x="80" y="363" width="215" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="UQK-sj-w6c">
+                                <rect key="frame" x="10" y="20" width="365" height="120"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="WwX-Jf-flu">
+                                        <rect key="frame" x="0.0" y="0.0" width="201" height="120"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iT6-22-w3G">
+                                                <rect key="frame" x="0.0" y="0.0" width="72" height="30"/>
+                                                <state key="normal" title="Beginner ^"/>
+                                                <connections>
+                                                    <action selector="stagePressed:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="b3R-XF-NGO"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oKE-9A-cez">
+                                                <rect key="frame" x="0.0" y="45" width="92" height="30"/>
+                                                <state key="normal" title="3 days/weel ^"/>
+                                                <connections>
+                                                    <action selector="daysPressed:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="SWT-2h-1qc"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fgk-w1-2Ih">
+                                                <rect key="frame" x="0.0" y="90" width="66" height="30"/>
+                                                <state key="normal" title="Any Sex ^"/>
+                                                <connections>
+                                                    <action selector="sexPressed:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="dEA-6A-Io7"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="f4n-pN-GaF">
+                                        <rect key="frame" x="201" y="0.0" width="164" height="120"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MsK-ID-ZF0">
+                                                <rect key="frame" x="0.0" y="0.0" width="164" height="30"/>
+                                                <state key="normal" title="Stength ^"/>
+                                                <connections>
+                                                    <action selector="typePressed:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="fG8-PT-1Hk"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qrx-LW-kbg">
+                                                <rect key="frame" x="0.0" y="45" width="164" height="30"/>
+                                                <state key="normal" title="Barbell ^"/>
+                                                <connections>
+                                                    <action selector="apparatusPressed:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="jzW-wJ-Zxp"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ULQ-n9-can">
+                                                <rect key="frame" x="0.0" y="90" width="164" height="30"/>
+                                                <state key="normal" title="Unser 40 ^"/>
+                                                <connections>
+                                                    <action selector="agePressed:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="Ckc-18-K4J"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CHB-ay-cQb">
+                                <rect key="frame" x="0.0" y="170" width="375" height="448"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProgramCellID" textLabel="fdW-JH-Dye" detailTextLabel="8BP-Pf-mre" style="IBUITableViewCellStyleSubtitle" id="FXs-Nc-YWS">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FXs-Nc-YWS" id="an2-eb-k87">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fdW-JH-Dye">
+                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8BP-Pf-mre">
+                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="NDk-cv-Gan" firstAttribute="top" secondItem="zEq-FU-wV5" secondAttribute="bottom" constant="8" symbolic="YES" id="Day-4N-Vmt"/>
-                            <constraint firstItem="NDk-cv-Gan" firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="JgO-Fn-dHn"/>
-                            <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
-                            <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
+                            <constraint firstItem="UQK-sj-w6c" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" id="8YD-oB-wMW"/>
+                            <constraint firstItem="CHB-ay-cQb" firstAttribute="top" secondItem="UQK-sj-w6c" secondAttribute="bottom" constant="30" id="BOd-Ah-yeX"/>
+                            <constraint firstItem="CHB-ay-cQb" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" id="GAC-0a-hI1"/>
+                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="UQK-sj-w6c" secondAttribute="trailing" id="Hag-rN-VsF"/>
+                            <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="CHB-ay-cQb" secondAttribute="bottom" id="JGU-7c-BzC"/>
+                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="CHB-ay-cQb" secondAttribute="trailing" id="TVv-hD-djg"/>
+                            <constraint firstItem="UQK-sj-w6c" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="10" id="dbn-VX-D3A"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Programs" image="second" id="cPa-gy-q4n"/>
+                    <connections>
+                        <outlet property="ageButton" destination="ULQ-n9-can" id="J9d-Ay-3kX"/>
+                        <outlet property="apparatusButton" destination="qrx-LW-kbg" id="tZw-iT-eXg"/>
+                        <outlet property="daysButton" destination="oKE-9A-cez" id="5mH-hl-Fe9"/>
+                        <outlet property="sexButton" destination="fgk-w1-2Ih" id="Yu8-Ik-rre"/>
+                        <outlet property="stageButton" destination="iT6-22-w3G" id="Zht-bF-8Pu"/>
+                        <outlet property="tableView" destination="CHB-ay-cQb" id="r5Y-HF-1Ia"/>
+                        <outlet property="typeButton" destination="MsK-ID-ZF0" id="bcx-ME-HIN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
